--- a/style_reg.css
+++ b/style_reg.css
@@ -47,6 +47,7 @@
     height: 4px;
     width: 0;
     background-color: #e02141;
+    max-width: 100%;                             /* полоска на странице ввода удлинялась до бесконечности, решил этой строчкой, хоть уверен, что это не верно*/
   }
 
   .name::placeholder,
