--- a/style_reg.css
+++ b/style_reg.css
@@ -8,28 +8,24 @@
     line-height: 14px;
   }
 
-  .name,
-.password {
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 0 10px;
-  background-color: transparent;
-  font: inherit;
-  font-size: 14px;
-  line-height: 30px;
-  outline-offset: 0;
-  border: 1px solid;
-}
+  .name ,
+  .password {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 0 10px;
+    background-color: transparent;
+    font: inherit;
+    font-size: 14px;
+    line-height: 30px;
+    outline-offset: 0;
+    border: 1px solid;
+    margin-right: 20px;
+  }
 
 .password {
     padding-bottom: 4px;
 }
 
-
-.name:focus::placeholder,
-.password:focus::placeholder {
-  font-size: 0;
-}
 
 
 .checkbox-label {
