--- a/style_reg.css
+++ b/style_reg.css
@@ -42,7 +42,7 @@
   .security-bar {
     height: 4px;
     width: 0;
-    background-color: #e02141;
+    background-color: #042055;
     max-width: 100%;                             /* полоска на странице ввода удлинялась до бесконечности, решил этой строчкой, хоть уверен, что это не верно*/
   }
 
